GH-12763: Fix the alignment attribute-value pair

--- a/feature-libs/product-configurator/rulebased/styles/_configurator-overview-attribute.scss
+++ b/feature-libs/product-configurator/rulebased/styles/_configurator-overview-attribute.scss
@@ -9,7 +9,7 @@
     font-weight: 600;
 
     @include media-breakpoint-up(md) {
-      width: 41.6666666667%;
+      width: 40%;
 
       @include forVersion(3.3) {
         width: 40%;
